--- a/app/templates/autoindex.html
+++ b/app/templates/autoindex.html
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block aside %}
-  <div style="width: 500px; margin: 30px auto;">
-    <h2>My Application</h2>
+    <div style="width: 500px; margin: 30px auto;">
+    <h2>My apka</h2>
 {% endblock %}
 
 {% block footer %}
