--- a/app/templates/__autoindex__/autoindex.html
+++ b/app/templates/__autoindex__/autoindex.html
@@ -4,15 +4,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+
   <meta charset="utf-8" />
   <title>Index of {{ curdir.path }}</title>
   {% block meta %}
     <link rel="stylesheet" type="text/css"
       href="{{ url_for('__autoindex__.static', filename='autoindex.css') }}" />
   {% endblock %}
+
+
 </head>
+
+
 <body>
-  {% block aside %}{% endblock %}
+
+
+  {% block aside %}
+
+
+  {% endblock %}
+
   {% block table %}
     <table>
       <thead>
@@ -32,11 +44,15 @@
       </tbody>
     </table>
   {% endblock %}
+
+
   {% block footer %}
     {% set env = request.environ %}
     <address>{{ env.SERVER_SOFTWARE }}
       Server at {{ env.HTTP_HOST }}
       Port {{ env.SERVER_PORT }}</address>
   {% endblock %}
+
+
 </body>
 </html>
