--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "baseLobby.html" %}
 
 {% block content %}
      <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
