--- a/app/templates/__autoindex__/autoindex.html
+++ b/app/templates/__autoindex__/autoindex.html
@@ -1,28 +1,18 @@
-{% from "__autoindex__/macros.html" import entry, thead, breadcrumb
-   with context %}
+{% from "__autoindex__/macros.html" import entry, thead, breadcrumb with context %}
 
 <!DOCTYPE html>
 <html>
 <head>
-
-
   <meta charset="utf-8" />
   <title>Index of {{ curdir.path }}</title>
-  {% block meta %}
-    <link rel="stylesheet" type="text/css"
-      href="{{ url_for('__autoindex__.static', filename='autoindex.css') }}" />
-  {% endblock %}
 
 
 </head>
 
-
 <body>
 
-
   {% block aside %}
-
-
+<h1>tttt</h1>
   {% endblock %}
 
   {% block table %}
@@ -37,22 +27,15 @@
           </tr>
         {% endif %}
       </thead>
+
       <tbody>
         {% for ent in entries %}
           {{ entry(ent) }}
         {% endfor %}
       </tbody>
+
     </table>
   {% endblock %}
-
-
-  {% block footer %}
-    {% set env = request.environ %}
-    <address>{{ env.SERVER_SOFTWARE }}
-      Server at {{ env.HTTP_HOST }}
-      Port {{ env.SERVER_PORT }}</address>
-  {% endblock %}
-
 
 </body>
 </html>
