--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -1,7 +1,10 @@
 <html>
+<head>
+
+</head>
    <body>
-      <form action='' method="POST" enctype="multipart/form-data">
-    <p><input type='file' name='file[]' multiple=''>
+      <form action='' method=post enctype="multipart/form-data">
+    <p><input type='file' name='file' multiple=''>
     <input type='submit' value='upload'>
     </p>
 
