--- a/app/templates/all.html
+++ b/app/templates/all.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 {% from "__autoindex__/macros.html" import entry, thead, breadcrumb with context %}
 
-
-
 {% block content %}
 
 
@@ -10,40 +8,72 @@
 
     {% block aside %}
     <div style="width: 600px; margin: 30px auto;">
-    <h2>My apka</h2>
 
     <form action='' method=post enctype="multipart/form-data">
-    <p><input type='file' name='file' multiple=''>
-    <input type='submit' value='upload'></p>
+        <p>
+            <input type='file' name='file' multiple=''>
+            <input type='submit' value='Dodaj plik'>
+        </p>
     </form>
 
-    <form action="" method="post" novalidate>
-        <input type='text'  name='textMakeFolder' multiple=''>
-        <input type='submit' value='Stworz folder'>
-    </form>
+        <br>
+
+     <form   action='' method="post" enctype="multipart/form-data">
+        <p>
+            <input type="text" name="tekst" multiple='' placeholder="nazwa folderu">
+            <input type="submit" value='Stworz folder'>
+              {{ form.csrf_token }}
+        </p>
+      </form>
+
+        <br>
+
+
+     <form id="usunID" action='' method="get" enctype="multipart/form-data">
+        <p>
+            <input type="submit" value='Usuń pliki'>
+        </p>
+     </form>
+
 
     {% endblock %}
 
     {% block table %}
-    <table>
-      <thead>
-        {{ thead() }}
-        {% if not curdir.is_root() %}
-          <tr>
-            <td class="breadcrumb" colspan="4">
-              <h1>{{ breadcrumb(curdir) }}</h1>
-            </td>
-          </tr>
-        {% endif %}
-      </thead>
-      <tbody>
-        {% for ent in entries %}
-          {{ entry(ent) }}
-        {% endfor %}
-      </tbody>
-    </table>
-    {% endblock %}
 
+        <table>
+
+          <thead>
+            {{ thead() }}
+            {% if not curdir.is_root() %}
+              <tr>
+                <td class="breadcrumb" colspan="">
+                  <h1>{{ breadcrumb(curdir) }}</h1>
+                </td>
+              </tr>
+            {% endif %}
+          </thead>
+
+
+
+
+          <tbody>
+
+
+            {% for ent in entries %}
+
+                 {{ entry(ent) }}
+
+            {% endfor %}
+
+
+          </tbody>
+
+
+
+
+        </table>
+
+    {% endblock %}
 
 {% endblock %}
 
