--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,5 +6,7 @@
     <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
     {% endfor %}
     <hr>
+
+    <h1>Strona główna............</h1>
 {% endblock %}
 
