--- a/app/templates/all.html
+++ b/app/templates/all.html
@@ -1,81 +1,102 @@
 {% extends 'base.html' %}
 {% from "__autoindex__/macros.html" import entry, thead, breadcrumb with context %}
+{% from "_formhelpers.html" import render_field %}
 
-{% block content %}
 
 
- <h1>#Wszystkie Pliki</h1>
+{% block navUpload %}
 
-    {% block aside %}
-    <div style="width: 600px; margin: 30px auto;">
+    <button id="buttonUpload" class="buttonUploadClass">NEW</button>
 
-    <form action='' method=post enctype="multipart/form-data">
-        <p>
-            <input type='file' name='file' multiple=''>
-            <input type='submit' value='Dodaj plik'>
-        </p>
+    <form id="formUpload" action="" method="post" enctype="multipart/form-data">
+        <div class="panel-body">
+            {{ form2.plik(class_="formClass_Plik") }}
+            <input class="subplik" type="submit" name="sub" value="Dodaj plik">
+        </div>
     </form>
-
-        <br>
-
-     <form   action='' method="post" enctype="multipart/form-data">
-        <p>
-            <input type="text" name="tekst" multiple='' placeholder="nazwa folderu">
-            <input type="submit" value='Stworz folder'>
-              {{ form.csrf_token }}
-        </p>
-      </form>
-
-        <br>
-
-
-     <form id="usunID" action='' method="get" enctype="multipart/form-data">
-        <p>
-            <input type="submit" value='Usuń pliki'>
-        </p>
-     </form>
-
-
-    {% endblock %}
-
-    {% block table %}
-
-        <table>
-
-          <thead>
-            {{ thead() }}
-            {% if not curdir.is_root() %}
-              <tr>
-                <td class="breadcrumb" colspan="">
-                  <h1>{{ breadcrumb(curdir) }}</h1>
-                </td>
-              </tr>
-            {% endif %}
-          </thead>
-
-
-
-
-          <tbody>
-
-
-            {% for ent in entries %}
-
-                 {{ entry(ent) }}
-
-            {% endfor %}
-
-
-          </tbody>
-
-
-
-
-        </table>
-
-    {% endblock %}
 
 {% endblock %}
 
 
+
+{% block navMini %}
+
+    <div id="formsStyle" class="formsC">
+        <input class="fCheckButton"  id='modelCheckButton' type="button" value="Make folder">
+    </div>
+
+{% endblock %}
+
+
+{% block modalNowyFolder %}
+     <form action="" method="post" enctype="multipart/form-data">
+        {{ form.tekst }}
+        <input type="submit" name="sub" value="Stworz folder">
+     </form>
+{% endblock %}
+
+{% block modalDodajPlik %}
+        <form action="" method="post" enctype="multipart/form-data">
+             <input id="fileUpload" type='file' name="plik" multiple='' >
+            <input type="submit" id="buttonUp" name="sub" value="Dodaj plik">
+        </form>
+{% endblock %}
+
+
+
+
+{% block modalRename %}
+
+    <input form="headerSecondForm" id="modalRenameText" type='text' name="modalRenameTextName" placeholder="Wpisz nową nazwe">
+    <input form="headerSecondForm" type="submit" id="modalRenameSub" name="sub" value='Zmien to nazwe'>
+
+{% endblock %}
+
+
+
+
+{% block headerSecond %}
+
+    <div id="formsCheck" class="fCheck">
+        <button id="btnRename" class="btnRenameC">Rename</button>
+
+         <form id="headerSecondForm" method="post" action='' enctype="multipart/form-data">
+             <input id="usunIdSub" type="submit" name="sub" value='Usuń pliki' >
+
+         </form>
+     </div>
+
+{% endblock %}
+
+
+ {% block main %}
+
+    {% block aside %}
+        <div style="width: 98% ; margin: 10px auto";>
+        {% block table %}
+            <table>
+              <thead>
+                {% if not curdir.is_root() %}
+                  <tr>
+                    <td class="breadcrumb" colspan="5">
+                      <h1>{{ breadcrumb(curdir) }}</h1>
+                    </td>
+                  </tr>
+                {% endif %}
+              {{ thead() }}
+              </thead>
+              <tbody>
+                {% for ent in entries %}
+
+                     {{ entry(ent) }}
+
+                {% endfor %}
+              </tbody>
+            </table>
+        </div>
+        {% endblock %}
+    {% endblock %}
+
+
+{% endblock %}
 
