--- a/app/static/autoindex.css
+++ b/app/static/autoindex.css
@@ -1,75 +1,12 @@
-* {
-  margin: 0;
-  padding: 0;
-  border: none;
+body {
+   margin:0;
+   width:100%;
+   height:100%;
 }
-
-
-
-a:link, a:visited {
-  text-decoration: none;
-}
-a:link {
-  color: #36c;
-}
-a:visited {
-  color: #333;
-}
-a:hover {
-  text-decoration: underline;
-}
-
-#readme {
-  padding: 10px 26px;
-  border-bottom: 1px solid #eee;
-  font-size: 12px;
-  color: #333;
-  background: #fafafa;
-}
-#readme pre {
-  line-height: 1.2;
-}
-#readme p, #readme ul, #readme ol,
-#readme h1, #readme h2, #readme h3, #readme h4, #readme h5, #readme h6 {
-  display: block;
-  margin-bottom: 1em;
-}
-#readme h1, #readme h2, #readme h3, #readme h4, #readme h5, #readme h6 {
-  padding: 0;
-  color: #456;
-  text-align: left;
-  font-family: sans-serif;
-  font-weight: bolder;
-}
-#readme pre code {
-  display: block;
-  padding: 9px;
-  margin: 0 -10px 1em;
-  border: 1px solid #cde;
-  color: #567;
-  background: #fff;
-}
-#readme li {
-  margin-left: 2em;
-}
-#readme blockquote {
-  padding: 9px;
-  margin: 0 -10px 1em;
-  border-left: 1px solid #cde;
-}
-
-#readme blockquote :last-child {
-  margin-bottom: 0;
-}
-#readme h1 { font-size: 4.5em; }
-#readme h2 { font-size: 1.4em; }
-#readme h3 { font-size: 1.3em; }
-#readme h4 { font-size: 1.2em; }
-#readme h5 { font-size: 1.1em; }
-#readme h6 { font-size: 1em; }
 
 .breadcrumb {
-  padding: 0;
+  padding: 0;  background-color: #f4f4f4;
+
 }
 .breadcrumb a {
   margin: 0;
@@ -92,7 +29,7 @@ a:hover {
 
 table {
   border-collapse: collapse;
-  width: 200%;
+  width: 100%;
   background: #fff;
 }
 thead {
@@ -101,20 +38,27 @@ thead {
 th {
   font-size: 11px;
   height: 30px;
-  background: #ddd;
-  background: -webkit-gradient(
-    linear,
-    left bottom,
-    left top,
-    color-stop(0, #ddd),
-    color-stop(1, #eee)
-  );
-  background: -moz-linear-gradient(
-    center bottom,
-    #ddd 0%,
-    #eee 100%
-  );
+  background:#FF6F61;
+
+  border: 3px solid #f4f4f4;
 }
+
+th.name{
+  text-align: left;
+}
+table tr:first-child th {
+    border-top: 0;
+}
+table tr:last-child th {
+    border-bottom: 0;
+}
+table tr th:first-child {
+    border-left: 0;
+}
+table tr th:last-child {
+    border-right: 0;
+}
+
 th a:link, th a:visited {
   margin: 0 10px;
   color: #333;
@@ -123,9 +67,10 @@ th img {
   position: absolute;
   margin-left: -6px;
 }
-tbody {
-  border: solid #ccc;
-  border-width: 1px 0;
+table tbody {
+
+background-color: #f4f4f4;
+
 }
 hr {
   margin: 0;
@@ -135,11 +80,12 @@ td {
   padding: 5px;
   font-size: 11px;
   color: #333;
-  border-left: 1px dashed #eee;
+   border-bottom: 1px solid rgba(0,0,0,0.1);
 }
 td a {
   margin-right: 40px;
   font-size: 14px;
+
 }
 td.modified {
   text-align: center;
@@ -147,9 +93,17 @@ td.modified {
 td.size {
   text-align: right;
 }
-.icon, .name {
-  border: none;
+
+td.lp{
+  text-align: center;
+  width: 50px ;
 }
+
+ a{
+  color: inherit;
+  text-decoration: none;
+}
+
 .icon {
   width: 16px;
   padding-right: 0;
@@ -167,3 +121,175 @@ address {
   color: #333;
   text-align: right;
 }
+
+.formsC {
+ float:right;
+  margin-right: 10px;
+ background-color: #cccccc;
+  padding-right: 15px;
+}
+
+.fCheck {
+ float:right;
+  margin-right: 10px;
+ background-color: #cccccc;
+  padding-right: 15px;
+}
+
+.fCheckButton{
+  background: coral;
+  color: #ffffff;
+}
+
+.fCheckButton:hover{
+  background: #333333;
+}
+
+.modal{
+  display:none;
+  position:fixed;
+  z-index: 5;
+  left:0;
+  top:0;
+  height: 100%;
+  width: 100%;
+  overflow:auto;
+  background: rgba(0,0,0,0.5);
+}
+
+.modal-content{
+  background-color: #f4f4f4;
+  margin: 20% auto;
+  padding: 20px;
+  width: 70%;
+  box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2),0 7px 20px 0 rgba(0,0,0,0.15);
+
+}
+
+.closeBtn{
+  color: #ccc;
+  float:right;
+  font-size: 30px;
+}
+
+
+.closeBtn:hover,.closeBtn:focus{
+  color:#000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#formUpload{
+  display: none;
+}
+
+#fileUpload{
+  display: none;
+}
+
+#formsCheck {
+  height: 100%;
+}
+
+
+.buttonUploadClass{
+  background-color: #FF4136; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 4%;
+}
+
+.container{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  display: grid;
+  grid-template-columns: 10% 0.5% 89%;
+  grid-template-rows: 6% 0.5% 5% 0.5% 88%;
+}
+
+
+.header{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 3;
+  grid-column-end: 4;
+
+  background-color: #dddddd;
+  z-index: 1;
+}
+
+.headerSecond{
+  display: none;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 3;
+  grid-column-end: 4;
+
+  background-color:#6B5B95;
+  z-index: 2;
+}
+
+.headerProfil{
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 1;
+  grid-column-end: 2;
+
+  background-color: #dddddd;
+}
+
+.headerForm{
+  height: 100%;
+  position: relative;
+  margin: 0 auto;
+  float:left;
+
+}
+
+.headerForm ul li{
+  display:inline-block;
+  float:left;
+
+}
+
+.nav{
+  grid-row-start: 3;
+  grid-row-end: 6;
+  grid-column-start: 1;
+  grid-column-end: 2;
+
+  font-weight:bold;
+  color:#fff!important;
+  background-color:#666666;
+  text-align: center;
+}
+
+.navMini{
+  grid-row-start: 3;
+  grid-row-end: 4;
+  grid-column-start: 3;
+  grid-row-end: 4;
+
+  background-color: #f4f4f4;
+}
+
+.main{
+  grid-row-start: 5;
+  grid-row-end: 6;
+  grid-column-start: 3;
+  grid-column-end: 3;
+
+  color:#333333;
+  background-color: #f4f4f4;
+
+}
+
