--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,52 +9,124 @@
     <title> Tytuł projektu....</title>
     {% endif %}
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-{% block meta %}
-    <link rel="stylesheet" type="text/css" href="../static/autoindex.css">
-  {% endblock %}
+    {% block meta %}
+        <link rel="stylesheet" type="text/css" href="/static/autoindex.css">
+      {% endblock %}
+
 
 </head>
+
+
 <body>
 
-    <div>
-        Menu1:
-        <a href="{{ url_for('index') }}">Strona główna</a>
-        {% if current_user.is_anonymous %}
-        <a href="{{ url_for('login') }}">Login</a>
-        {% else %}
-        <a href="{{ url_for('user', username=current_user.username) }}">Profil</a>
-        <a href="{{ url_for('logout') }}">Wyloguj</a>
-        {% endif %}
+
+    <div class="container">
+    <header class="header">
+
+    </header>
+
+    <section class="headerSecond">
+
+        {% block headerSecond %}
+        {% endblock %}
+
+    </section>
+
+    <section class="headerProfil">
+        {% block headerProfil %}
+             <div class="headerForm">
+                        <button class="classProfil" onclick="ZmienLokacje( '{{ url_for('user', username=current_user.username) }}' )"  title="Profil">Profil</button>
+                        <button class="classWyloguj" onclick="ZmienLokacje( '{{ url_for('logout')  }}' )"   title="Wyloguj">Wyloguj</button>
+            </div>
+        {% endblock %}
+    </section>
+
+    <nav class="nav">
+        <div class="navUploadPrzycisk">
+
+            {% block navUpload %}
+
+            {% endblock %}
+
+        </div>
+        <div class="navPrzyciski">
+            <ul class="navListaPrzyciskow">
+                    <li>
+                        <button class="classAllFile" onclick="ZmienLokacje( '{{ url_for('autoindex')  }}' )"   title="All files">All files</button>
+                    </li>
+                    <li>
+                        <button class="classControlFile" onclick="ZmienLokacje( '{{ url_for('index') }}' )"  title="Control File">Control Files</button>
+                    </li>
+                    <li>
+                        <button class="lastFiles" onclick="ZmienLokacje( '{{ url_for('index') }}' )"  title="Last files">Last files</button>
+                    </li>
+                    <li>
+                        <button class="classShareFile" onclick="ZmienLokacje( '{{ url_for('index') }}' )"  title="Share Files">Share Files</button>
+                    </li>
+                    <li>
+                        <button class="trashFiles" onclick="ZmienLokacje( '{{ url_for('index') }}' )"  title="trashFiles">Trash Files</button>
+                    </li>
+                 </ul>
+        </div>
+    </nav>
+
+    <section class="navMini">
+
+        {% block navMini %}
+        {% endblock %}
+
+    </section>
+
+
+    <main class="main">
+
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <ul>
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+            {% endwith %}
+
+        {% block main %}
+
+        {% endblock %}
+    </main>
+</div>
+
+ <div id="modalNowyFolder" class="modal">
+    <div class="modal-content">
+        <span class="closeBtn">&times;</span>
+            {% block modalNowyFolder %}
+            {% endblock %}
     </div>
+</div>
 
-    <hr>
-
-    <div>
-        Menu2:
-        <a href="{{ url_for('autoindex') }}">Wszystkie pliki</a>
-        <a href="{{ url_for('index') }}">Pliki kontrolowane GIT</a>
-        <a href="{{ url_for('index') }}">Udostępnione</a>
+ <div id="modalDodajPlik" class="modal">
+    <div class="modal-content">
+        <span class="closeBtn">&times;</span>
+            {% block modalDodajPlik %}
+            {% endblock %}
     </div>
+</div>
 
-    <hr>
 
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
+<div id="modalRename" class="modal">
+    <div class="modal-content">
+        <span class="closeBtn">&times;</span>
+            {% block modalRename %}
+            {% endblock %}
+    </div>
+</div>
 
 
 
+     <script src="/static/js/main.js"></script>
+    <script type="text/javascript" src="/static/js/form.js"></script>
 
-
-    {% block content %}
-
-    {% endblock %}
 </body>
 </html>
